<resources>
    <string name="app_name">Codenames Pictures</string>
    <string name="play_button">Play</string>
    <string name="setting_button">Setting</string>
    <string name="help_button">Help</string>
    <string name="setting">Setting</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="name">Device Name</string>
    <string name="quit">Quit</string>
    <string name="end_turn">End Turn</string>
    <string name="f_op">Field Operatives</string>
    <string name="spymaster">Spy Masters</string>
    <string name="main_menu">Main Menu</string>
    <string name="enable_wifi">Enable Wifi</string>
    <string name="discover">Discover</string>
    <string name="seekbar_str"> Number\nof cards:</string>
    <string name="spymaster_turn">Pass to spies</string>
    <string name="exit_game">Exit Game</string>

    <string name="connect_peer_button">connect</string>
    <string name="disconnect_peer_button">disconnect</string>
    <string name="label_me">Me</string>
    <string name="label_peers">peers</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="enable_p2p_button">enable</string>
    <string name="discover_peers_button">discover</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="group_owner_text">group owner</string>
</resources>
