<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_me"
        android:layout_margin="2dp"
        android:textColor="@color/colorWhite"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:gravity="center_vertical"
        android:background="@color/colorWhite" />

    <!-- Self information -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_margin="3dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:src="@mipmap/ic_launcher" />
        <TextView
            android:id="@+id/tv_myName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />
        <TextView
            android:id="@+id/tv_myStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_peers"
        android:layout_margin="2dp"
        android:textColor="@color/colorWhite"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:gravity="center_vertical"
        android:background="@color/colorWhite" />

    <!-- Available peers -->
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawSelectorOnTop="false" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:text="@string/empty_message" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:gravity="center_vertical"
        android:background="@color/colorWhite" />
</LinearLayout>